--- a/src/agb.search-engine/components/gene-details/gene-details.component.html
+++ b/src/agb.search-engine/components/gene-details/gene-details.component.html
@@ -14,59 +14,10 @@
           name: {{gene.name}}
         </p>
         <p *ngIf="gene.name">
-          pathway: {{ gene.species }}
+          species: {{ gene.species }}
         </p>
-        <p *ngIf="gene.lower_bound && gene.upper_bound">
-          reversible: {{ gene.lower_bound
-          < 0 && gene.upper_bound > 0 }}
-        </p>
-        <p *ngIf="gene.upper_bound">
-          upper_bound: {{gene.upper_bound}}
-        </p>
-        <p *ngIf="gene.lower_bound == 0">
-          lower_bound: {{gene.lower_bound}}
-        </p>
-        <p *ngIf="gene.lower_bound">
-          lower_bound: {{gene.lower_bound}}
-        </p>
-        <br>
 
-        <div class="row">
-          <div class="col-md-12">
-          </div>
-        </div>
-
-        <div>
-          <h4>
-            <strong>Connected genes</strong>
-          </h4>
-          <table class="table table-hover">
-            <tbody>
-              <tr>
-                <td>
-                  <strong>metabolite</strong>
-                </td>
-                <td>
-                  <strong>genes</strong>
-                </td>
-              </tr>
-              <tr *ngFor="let m of relatedmetabolites">
-                <td>
-                  <a [routerLink]="['/metabolite', m.id]">
-                    {{m.id}}
-                  </a>
-                </td>
-                <td>
-                  <span *ngFor="let r of m.genes">
-                    <a [routerLink]="['/gene', r]">
-                      {{r}}
-                    </a>,
-                  </span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+        
       </div>
     </div>
   </div>
