--- a/src/agb.search-engine/components/gene-details/gene-details.component.html
+++ b/src/agb.search-engine/components/gene-details/gene-details.component.html
@@ -1,5 +1,6 @@
 <section class="geneDetails">
-  <div *ngIf="gene" class="geneDetailsChild col-md-6 col-md-offset-0">
+  <div class="col-md-6">
+  <div *ngIf="gene" class="geneDetailsChild col-md-6 col-md-offset-2">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">
@@ -24,4 +25,5 @@
       </div>
     </div>
   </div>
+</div>
 </section>
